Test/typing/should_fail/array_1.java
package tutu.titi.toto;

class A {

	public void method1() {
		int[] two = {3, 4};
		int one = 3;
		two[] = one; // cf readme
	}
}
